--- a/app/views/public/sale_areas/show.html.erb
+++ b/app/views/public/sale_areas/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5 mb-3">
-    <h3 class="bg-dark"><strong><%= @sale_area.name %></strong> 店舗一覧</h3>
+    <h3 class="bg-light"><strong><%= @sale_area.name %></strong> 店舗一覧</h3>
   </div>
   <div class="row">
     <% @stores.each do |store| %>
