--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 100px;">
+<div class="container">
   <div class="row mt-5 mb-3">
     <h3><strong><%= @category.name %></strong>  一覧</h3>
   </div>
