[Update]顧客商品詳細画面 1度に購入できる商品の上限を指定

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -88,7 +88,7 @@
     </div>
     <div class="row">
       <div class="card">
-        <h5>こちらのサイトは球場内で使用できるECサイトです</h5>
+        <h5>こちらのサイトは球場内で使用できるECサイトです。</h5>
       </div>
     </div>
   </section>
