--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -11,11 +11,13 @@
         <i class="fas fa-store-alt"></i> <span><%= @item.store.name %></span>
       </div>
     </div>
-    <% if @item.stock < 10 %>
+    <% if @item.stock == 0 %>
+      <p class="mt-3 mx-auto text-danger">この商品は現在売り切れです。</p>
+    <% elsif @item.stock < 10 %>
       <p class="mt-3 mx-auto text-danger">この商品の在庫は残り<%= @item.stock %>点です。</p>
     <% end %>
   </div>
-  <% unless current_customer.nickname == "guestuser" %>
+  <% unless current_customer.nickname == "guestuser" || @item.stock == 0 %>
     <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
     <div class="row mt-3">
       <div class="col-4 mx-auto">
