--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,12 +46,17 @@
         <li class="nav-item">
           <%= link_to "グルメを探す", searches_path, class: 'nav-link' %>
         </li>
+        <% unless current_customer.nickname == "guestuser" %>
+          <li class="nav-item">
+            <%= link_to "カート", cart_items_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
+          </li>
+        <% end %>
         <li class="nav-item">
-          <%= link_to "カート", cart_items_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
-        </li>
+            <%= link_to "FAQ", homes_faq_path, class: 'nav-link' %>
+          </li>
         <li class="nav-item">
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
         </li>
