[Update]ランキングCSS追加

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -77,6 +77,29 @@ h3 {
   font-weight: 900;
 }
 
+.rank-1 {
+  color: #dbb400;
+  background-color: #dbb400;
+}
+
+.rank-2 {
+  color: #c9caca;
+  background-color: #c9caca;
+}
+
+.rank-3 {
+  color: #c9ae5d;
+  background-color: #c9ae5d;
+}
+
+.rank-4 {
+  color: red;
+}
+
+.rank-5 {
+  color: green;
+}
+
 .flash-notifications {
   z-index: 9999;
   font-weight: bold;
