--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -64,20 +64,21 @@
     <div class="row mb-3" style="margin-top: 200px;">
       <h3>人気グルメランキング</h3>
     </div>
-    <% @items_rank.each do |item| %>
-      <div class="card p-2 mt-3">
+    <% @items_rank.each.with_index(1) do |item, i| %>
+      <div class="card p-2 mt-3 rank-<%= i %>">
         <div class="row">
-        <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
-          <div class="col-12">
-            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
-          </div>
-          <div class="col-12 mt-1">
-            <h4><strong><%= item.name %></strong></h4>
-            <h4><strong>¥ <%= item.with_tax_price.to_s(:delimited) %></strong></h4>
-            <p class="explanation-text"><%= item.explanation %></p>
-            <i class="fas fa-store-alt"></i> <span><%= item.store.name %></span>
-          </div>
-        <% end %>
+          <h1 class="number-<%= i %> bg-dark"><%= i %>位</h1>
+          <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
+            <div class="col-12">
+              <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
+            </div>
+            <div class="col-12 mt-1">
+              <h4><strong><%= item.name %></strong></h4>
+              <h4><strong>¥ <%= item.with_tax_price.to_s(:delimited) %></strong></h4>
+              <p class="explanation-text"><%= item.explanation %></p>
+              <i class="fas fa-store-alt"></i> <span><%= item.store.name %></span>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
