--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -38,7 +38,7 @@
       <%= f.hidden_field :seat_number, value: @order.seat_number %>
       <%= f.hidden_field :total_price, value: @total_price %>
       <div class="text-center">
-        <%= f.submit "注文を確定する", class: "btn btn-primary text-center", style: "width: 80%;" %>
+        <%= f.submit "注文を確定する", class: "btn btncom text-center", style: "width: 80%;" %>
       </div>
     <% end %>
   </div>
@@ -106,7 +106,7 @@
     <%= f.hidden_field :seat_number, value: @order.seat_number %>
     <%= f.hidden_field :total_price, value: @total_price %>
     <div class="text-center mt-3 mb-3">
-      <%= f.submit "注文を確定する", class: "btn btn-primary text-center", style: "width: 80%;" %>
+      <%= f.submit "注文を確定する", class: "btn btncom text-center", style: "width: 80%;" %>
     </div>
   <% end %>
   <div class="row">
