--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="mt-5 mb-5 text-center">
-      <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%;" %>
+      <%= f.submit "確認画面へ", class: "btn btnsol", style: "width: 50%;" %>
     </div>
     <% end %>
   </div>
