--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="row mt-5 mx-auto">
-      <%= link_to "購入手続き", new_order_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
+      <%= link_to "購入手続き", new_order_path, class: "btn btnsol mx-auto", style: "color: white; width: 50%;" %>
     </div>
     <div class="row">
       <h5 style="margin-bottom: 100px;"></h5>
