--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -28,13 +28,13 @@
       <h3>ログイン</h3>
     </div>
     <div class="row" style="margin-top: 50px; height: 50px;">
-      <%= link_to 'ゲストログイン', customers_guest_sign_in_path, class: "btn btn-secondary mx-auto w-50 sign_in", style: "line-height: 50px;", method: :post %>
+      <%= link_to 'ゲストログイン(閲覧用)', customers_guest_sign_in_path, class: "btn btnlog mx-auto w-75", style: "line-height: 50px;", method: :post %>
     </div>
     <div class="row" style="margin-top: 50px; height: 50px;">
-      <%= link_to "会員登録", new_customer_registration_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 50px;" %>
+      <%= link_to "会員登録", new_customer_registration_path, class: "btn btnlog mx-auto w-75", style: "line-height: 50px;" %>
     </div>
     <div class="row" style="margin-top: 50px; height: 50px;">
-      <%= link_to "ログイン", new_customer_session_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 50px;" %>
+      <%= link_to "ログイン", new_customer_session_path, class: "btn btnlog mx-auto w-75", style: "line-height: 50px;" %>
     </div>
   </section>
   <% end %>
@@ -67,7 +67,7 @@
     <% @items_rank.each.with_index(1) do |item, i| %>
       <div class="card p-2 mt-3 rank-<%= i %>">
         <div class="row">
-          <h1 class="number-<%= i %> bg-dark"><%= i %>位</h1>
+          <h1 class="number-<%= i %> bg-dark ml-3"><%= i %>位</h1>
           <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
             <div class="col-12">
               <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
@@ -116,6 +116,10 @@
       </div>
     </div>
   </section>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
+  </div>
+  <a class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
