--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -29,8 +29,11 @@
     </div>
   </div>
   <div class="row mt-5" style="justify-content: center;">
-    <%= f.submit "新規登録", class: "btn btn-primary" %>
+    <%= f.submit "新規登録", class: "btn btnlog" %>
   </div>
   <% end %>
+  <div class="row">
+    <p class="mt-5 mx-auto">ログインは<%= link_to "こちら", new_customer_session_path %></p>
+  </div>
 </div>
 
