--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,32 +36,8 @@
 </header>
   <% elsif customer_signed_in? %>
 <header class="head">
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39;">
     <a class="navbar-brand" href="/">StadiumGourmet</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to "グルメを探す", searches_path, class: 'nav-link' %>
-        </li>
-        <% unless current_customer.nickname == "guestuser" %>
-          <li class="nav-item">
-            <%= link_to "カート", cart_items_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
-          </li>
-        <% end %>
-        <li class="nav-item">
-            <%= link_to "FAQ", homes_faq_path, class: 'nav-link' %>
-          </li>
-        <li class="nav-item">
-          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
-        </li>
-      </ul>
-    </div>
   </nav>
+  <% end %>
 </header>
-<% end %>
