--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -119,7 +119,7 @@
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
-  <a class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
+  <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
