--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,21 +5,31 @@
   <div id="sp-fixed-menu" class="for-sp" style="background-color: #a6ce39;">
     <ul>
       <li class="nav-item">
-        <%= link_to "グルメを探す", searches_path, class: 'nav-link' %>
+        <%= link_to searches_path, class: 'nav-link' do %>
+          <h4><i class="fas fa-search"></i></h4><p>グルメを探す</p>
+        <% end %>
       </li>
       <% unless current_customer.nickname == "guestuser" %>
         <li class="nav-item">
-          <%= link_to "カート", cart_items_path, class: 'nav-link' %>
+          <%= link_to cart_items_path, class: 'nav-link' do %>
+            <h4><i class="fas fa-shopping-cart"></i></h4><p>カート</p>
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
+          <%= link_to orders_path, class: 'nav-link' do %>
+            <h4><i class="fas fa-history"></i></h4><p>注文履歴</p>
+          <% end %>
         </li>
       <% end %>
       <li class="nav-item">
-          <%= link_to "FAQ", homes_faq_path, class: 'nav-link' %>
-        </li>
+        <%= link_to homes_faq_path, class: 'nav-link' do %>
+          <h4><i class="fas fa-question"></i></h4><p>FAQ</p>
+        <% end %>
+      </li>
       <li class="nav-item">
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
+        <%= link_to destroy_customer_session_path, method: :delete, class: 'nav-link' do %>
+          <h4><i class="fas fa-sign-out-alt"></i></h4><p>ログアウト</p>
+        <% end %>
       </li>
     </ul>
   </div>
