--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
   <% elsif customer_signed_in? %>
 <header class="head">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39;">
-    <a class="navbar-brand" href="/">StadiumGourmet</a>
+    <a class="navbar-brand mx-auto" style="color: #fff;" href="/">StadiumGourmet</a>
   </nav>
   <% end %>
 </header>
