--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="row" style="margin-top: 30px;"></div>
   <div class="card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
