--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="row" style="margin-top: 30px;"></div>
   <div class="card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
@@ -46,6 +47,6 @@
     <% end %>
   </div>
   <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
+    <h5 style="margin-bottom: 150px;"></h5>
   </div>
 </div>
