[Update]トップページフォント変更

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,22 +1,22 @@
 <header id="home">
-  <h1 id="logo" class="text-center">
-      <a class="p-2" style="color: #a6ce39;" href="/">StadiumGourmet</a>
+  <h1 id="logo" class="w-100 text-center">
+      <a class="top-logo mx-auto" href="/">StadiumGourmet</a>
   </h1>
   <nav id="menubar" class="w-100">
     <ul style="list-style: none; padding-left: 0; margin-left: 45%;">
       <% unless customer_signed_in? %>
         <li>
-          <a style="color: blue;" href="#rogin"><i class="fas fa-sign-in-alt"></i> Log In</a>
+          <a style="color: #a6ce39;" href="#rogin"><i class="fas fa-sign-in-alt"></i> Log In</a>
         </li>
       <% end %>
       <li>
-        <a style="color: blue;" href="#new"><i class="fas fa-star"></i> New Gourmet</a>
+        <a style="color: #a6ce39;" href="#new"><i class="fas fa-star"></i> New Gourmet</a>
       </li>
       <li>
-        <a style="color: blue;" href="#ranking"><i class="fas fa-crown"></i> Gourmet Ranking</a>
+        <a style="color: #a6ce39;" href="#ranking"><i class="fas fa-crown"></i> Gourmet Ranking</a>
       </li>
       <li class="mt-5">
-        <a style="color: blue;" href="#usage"><i class="fas fa-lightbulb"></i> こちらのサイトについて</a>
+        <a style="color: #a6ce39;" href="#usage"><i class="fas fa-lightbulb"></i> こちらのサイトについて</a>
       </li>
     </ul>
   </nav>
