--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -20,15 +20,22 @@ header #home {
 }
 
 header #logo {
-	width: 100%;	/*画像の幅*/
 	position: absolute;
-	bottom: 50%;
+	top: 20%;
 }
 
 #menubar {
 	position: absolute;
 	bottom: 20%;	/*ロゴやメニューが入っているブロックに対して、下からの配置場所の指定。*/
 	left: 0px;
+}
+
+.top-logo {
+  font-size: 1.5em;
+  width: 100%;
+  height: 10vh;
+  color: #a6ce39;
+  font-family: 'Londrina Shadow', cursive;
 }
 
 footer {
