--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,7 +11,7 @@ header .head {
 }
 
 header #home {
-  background-image: url("/assets/ball.jpg");
+  background-image: url("../images/ball.jpg");
   background-size: cover;
   background-position: center;
   z-index: 9998;
