--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,8 +33,8 @@
 </header>
 <% elsif customer_signed_in? %>
 <header class="head">
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39;">
-    <a class="navbar-brand mx-auto" style="color: #fff;" href="/">StadiumGourmet</a>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39; height: 70px;">
+    <a class="header-logo navbar-brand mx-auto" style="color: #fff;" href="/">StadiumGourmet</a>
   </nav>
 </header>
 <% end %>
