[Add]顧客トップページにFAQリンクを追加

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -18,6 +18,9 @@
       <li class="mt-5">
         <a style="color: #a6ce39;" href="#usage"><i class="fas fa-lightbulb"></i> こちらのサイトについて</a>
       </li>
+      <li class="">
+        <a style="color: #a6ce39;" href='/homes/faq'><i class="fas fa-question"></i> FAQ</a>
+      </li>
     </ul>
   </nav>
 </header>
