--- a/app/views/public/homes/faq.html.erb
+++ b/app/views/public/homes/faq.html.erb
@@ -26,6 +26,11 @@
     <h5>Q.メールアドレス、パスワードを忘れてしまいました</h5>
     <h5 class="text-success">A.こちらのアプリケーションはメールアドレス、パスワードの再設定はできかねます。お手数ですが再度会員登録をしていただきますようお願いいたします。</h5>
   </div>
+  <div class="row mt-3 w-100">
+  <% unless customer_signed_in? %>
+    <h4 class="mx-auto"><%= link_to "Top", root_path %></h5>
+  <% end %>
+  </div>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
