[Fix]顧客商品詳細画面 コメント追加

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -33,6 +33,10 @@
       <% end %>
     </div>
     <% end %>
+  <% else %>
+    <div class="row">
+      <p class="text-danger w-100 text-center">商品をカートへ入れるにはログインが必要です</p>
+    </div>
   <% end %>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
