[Update]顧客注文履歴一覧画面お客様不在に注文ステータスがなっている時の表示変更

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -33,7 +33,8 @@
       <% end %>
     </div>
     <% end %>
-  <% else %>
+  <% end %>
+  <% if current_customer.nickname == "guestuser" %>
     <div class="row">
       <p class="text-danger w-100 text-center">商品をカートへ入れるにはログインが必要です</p>
     </div>
