--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,7 +1,7 @@
 <div class="contaner">
 <% if @order.order_status_i18n == "お客様不在" %>
   <div class="row">
-    <div class="card mx-auto mt-5 p-3" style="width: 90%;">
+    <div class="card mx-auto p-3" style="margin-top: 100px; width: 90%;">
       <h1><i class="fas fa-exclamation-triangle text-danger"></i></h1>
       <div class="row">
         <h4 class="text-danger ml-3">商品のお届けに参りましたが不在のため持ち帰りました。</h4>
