--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -91,7 +91,7 @@
       <h3 class="mx-auto">こちらのサイトについて</h3>
     </div>
     <div class="row">
-      <div class="card mx-auto" style="width: 90%;">
+      <div class="card mx-auto">
         <h5>
           こちらのサイトは球場内で使用できるECサイトです。<br>
           会員登録をすることで商品を閲覧、購入することができます。<br>
@@ -99,19 +99,19 @@
           ゲストログインの場合は商品を閲覧することしかできません。<br>
         </h5>
       </div>
-      <div class="card mx-auto mt-3" style="width: 90%;">
+      <div class="card mx-auto mt-3">
         <h5>
           購入したい商品をカートに入れて注文することで商品を購入することができます。<br>
           注文の際にご自身の座席情報を入力してください。
         </h5>
       </div>
-      <div class="card mx-auto mt-3" style="width: 90%;">
+      <div class="card mx-auto mt-3">
         <h5>
           注文が完了しましたらご自身の席にて商品の到着をお待ちください。<br>
           係のものが商品をお届けに参ります。
         </h5>
       </div>
-      <div class="card mx-auto mt-3" style="width: 90%;">
+      <div class="card mx-auto mt-3">
         <h5>
           商品の受け渡しが完了しましたら取引の完了です。<br>
           ご自身の席でお好きな商品を購入してください!!
