[Update]public/searches/index.html.erb style記述をscssに変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -143,6 +143,11 @@ footer {
   }
 }
 
+.sale-area .category {
+  height: 75px;
+  text-align: center;
+}
+
 .long-name {
   white-space: nowrap;
   overflow: hidden;
