--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -148,11 +148,69 @@ footer {
   text-align: center;
 }
 
+.sale-card {
+  width: 95%;
+  .card-img-top {
+    width: 100%;
+    .store-img {
+      width: 100%;
+    }
+  }
+  .long-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .table {
+    table-layout: fixed;
+    th {
+      width: 15%;
+    }
+    .long-name {
+      width: 85%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
+
+.category-card {
+  width: 95%;
+  .card-img-top {
+    width: 100%;
+    .item-img {
+      width: 100%;
+      aspect-ratio: 3 / 2;
+      object-fit: cover;
+    }
+  }
+  .long-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .table {
+    table-layout: fixed;
+    th {
+      width: 15%;
+    }
+    td {
+      width: 85%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
+
 .long-name {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+
 
 h2 {
   margin-top: 50px;
