--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
-  <div class="row" style="margin-top: 30px;"></div>
-  <div class="card p-2 mt-5 text-dark">
+  <div class="row store-top"></div>
+  <div class="card store-card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
-        <div class="card-img-top"><%= image_tag @store.image, style: "width: 100%;" %></div>
+        <div class="card-img-top"><%= image_tag @store.image, class: "store-img" %></div>
       </div>
       <div class="col-12">
-        <table class="table table-borderless table-sm" style="table-layout: fixed;">
+        <table class="table table-borderless table-sm">
           <tr>
-            <th width="10%"><i class="fas fa-store-alt"></i></th>
-            <td width="90%"><h4 class="long-name"><strong><%= @store.name %></strong></h4></td>
+            <th><i class="fas fa-store-alt"></i></th>
+            <td><h4><strong><%= @store.name %></strong></h4></td>
           </tr>
         </table>
         <div class="row">
@@ -31,9 +31,9 @@
     <% @items.each do |item| %>
       <div class="col-6 mt-3">
         <div class="row">
-          <div class="card mx-auto" style="width: 95%;">
+          <div class="card item-card mx-auto">
             <%= link_to store_item_path(@store.id, item.id), class: "text-dark" do %>
-              <div class="card-img-top"><%= image_tag item.image, style: "width: 100%; aspect-ratio: 3 / 2; object-fit: cover;" %></div>
+              <div class="card-img-top"><%= image_tag item.image, class: "item-img" %></div>
               <h5 class="card-title long-name"><%= item.name %></h5>
               <% if item.is_active == true %>
                 <div>¥ <%= item.with_tax_price.to_s(:delimited) %></div>
@@ -46,7 +46,5 @@
       </div>
     <% end %>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 150px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
