--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -7,11 +7,12 @@
     <h4 class="text-danger mx-auto">カートに商品が入っていません。</h4>
   </div>
   <% else %>
+    <div class="row">
     <% @cart_items.each do |cart_item| %>
-      <div class="card p-2 mt-3 text-dark">
+      <div class="card cart-card  mx-auto p-2 mt-3 text-dark">
         <div class="row">
           <div class="col-4">
-            <div class="card-img-top"><%= image_tag cart_item.item.image, style: "width: 100%;" %></div>
+            <div class="card-img-top"><%= image_tag cart_item.item.image, class: "item-img" %></div>
           </div>
           <div class="col-8">
             <h5 class="card-title long-name"><%= cart_item.item.name %></h5>
@@ -31,11 +32,7 @@
             <p>価格 <%= cart_item.item.with_tax_price.to_s(:delimited) %> 円</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12">
-            <div style= "border: dashed 1px;"></div>
-          </div>
-        </div>
+        <div class="cart-border"></div>
         <div class="row">
           <div class="col-6">
             <h4 class="text-left">小計</h4>
@@ -47,16 +44,15 @@
       </div>
       <% @product_total += cart_item.subtotal %>
     <% end %>
+    </div>
     <div class="row mt-5">
       <div class="card mx-auto text-dark">
         <h4><strong>合計金額 <span class="ml-3"><%= @product_total.to_s(:delimited) %> 円</span></strong></h4>
       </div>
     </div>
     <div class="row mt-5 mx-auto">
-      <%= link_to "購入手続き", new_order_path, class: "btn btnsol mx-auto", style: "color: white; width: 50%;" %>
+      <%= link_to "購入手続き", new_order_path, class: "btn btnsol mx-auto w-50" %>
     </div>
-    <div class="row">
-      <h5 style="margin-bottom: 100px;"></h5>
-    </div>
+    <div class="page-under"></div>
   <% end %>
 </div>
