--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -23,7 +23,5 @@
     </div>
     <% end %>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 150px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
