[Update]public/orders/new.html.erb/ style記述をscssへ変更

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -37,11 +37,9 @@
       </div>
     </div>
     <div class="mt-5 mb-5 text-center">
-      <%= f.submit "確認画面へ", class: "btn btnsol", style: "width: 50%;" %>
+      <%= f.submit "確認画面へ", class: "btn btnsol w-50" %>
     </div>
     <% end %>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
